--- a/_includes/core/_nav.njk
+++ b/_includes/core/_nav.njk
@@ -1,10 +1,10 @@
-<header class="page-header grid">
-    <a href="/" class="page-title">
+<header class="page__header grid">
+    <a href="/" class="page__title">
         <span class="visually-hidden">Frills</span>
         {% include "_includes/core/_logo.njk" %}
 
     </a>
-    <nav aria-label="Top level" class="page-nav">
+    <nav aria-label="Top level" class="page__nav">
         <ul>
             {# <li>💁‍♀️ <a href="/about">About</a>
                 <li>📝 <a href="/blog">Blog</a>
