--- a/content/manifesto.njk
+++ b/content/manifesto.njk
@@ -1,12 +1,8 @@
 ---
 title: Manifesto
 emoji: ' <span class="emoji" role="img" aria-label="Label"></span>'
-eleventyNavigation:
-  key: Manifesto
-  emoji: 🌿
-  order: 4
 ---
-{% extends 'page.njk'%}
+{% extends 'layouts/page.njk'%}
 
 {%- block left -%}
 {%- endblock -%}
@@ -18,6 +14,6 @@ eleventyNavigation:
 
 {%- endblock -%}
 
-{%- block js -%}
+{%- block scriptsContent -%}
 
 {%- endblock -%}
