--- a/content/new.njk
+++ b/content/new.njk
@@ -11,8 +11,8 @@
 </head>
 <body>
 	<div class="page">
-        <header class="page-header grid">
-            <a href="/" class="page-title">
+        <header class="page__header grid">
+            <a href="/" class="page__title">
                 <span class="visually-hidden">Frills</span>
                 <svg class="frills" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 76 25" width="200" height="66" aria-hidden="true" preserveAspectRatio="xMinYMin">
                     <path class="frills-tx" d="M15.8 15c.5.3.7.8.7 1.6 0 1-.4 1.7-1.2 2-1 .4-2.2.5-3.4.5H7.7v1.8c0 2.1-.8 3.2-2.5 3.2-1.4 0-2.5-.8-3.3-2.4-.8-1.5-1.2-4-1.2-7.4a10 10 0 0 1 9.7-10.6c2.8-.2 6.8 1 6.8 4.3s-3.2 3.4-5.7 3.4c-1.7 0-4.1.7-4.1 2.7h3.7c1.5 0 3.4 0 4.7.9Zm6 9.1c-1.2 0-2-.7-2.5-2.2a21 21 0 0 1-.4-9c.3-1.6 1.1-2.8 2.7-2.8 1 0 2 .4 2.2 1.4a4 4 0 0 1 1.7-.8c1.4-.4 2.8-.4 4.1.2 1.4.6 2.8 2.3 2.1 3.9-.4.9-1.2 1.4-2.2 1.4-1.7 0-2.8-1-4.2.5-1.2 1.2-.8 3.3-.9 4.8 0 1.5-1 2.6-2.6 2.6Zm14-14.1c-2 0-3.3-1.8-3.3-3.6a3.4 3.4 0 1 1 6.8 0c0 1.9-1.6 3.6-3.5 3.6Zm0 14.1c-1.6 0-2.3-1.2-2.4-2.7-.3-2.5-.3-5 0-7.4.2-1.4 1-2.5 2.5-2.5s2.3 1.3 2.5 2.7c.3 2.5.3 5 0 7.4-.3 1.5-.9 2.5-2.6 2.5Zm8.4 0c-2.3 0-3-2.4-3.2-4.3a58 58 0 0 1 0-11.6c.2-2 .8-4.5 3.2-4.5 2.4 0 3.2 3.8 3.3 4.5.3 3.8.2 7.7-.2 11.5-.1 1.8-.9 4.4-3.1 4.4Zm8.3 0c-2.3 0-3-2.4-3.2-4.3a58 58 0 0 1 0-11.6c.2-2 1-4.5 3.3-4.5 2.4 0 3 2.5 3.2 4.5.3 3.8.3 7.7-.1 11.5-.1 1.9-1 4.4-3.2 4.4Zm10 0c-1.8 0-5.6-.5-5.6-3 0-.6.2-1 .6-1.4.4-.3 1-.5 1.5-.5 1 0 1.5.8 2.3.9.6 0 .9-.7.3-1l-2.1-.9c-1.4-.8-2.7-1.8-2.6-3.5 0-1.7 1.6-3 3.1-3.7 2-.8 4.3-.7 6.4-.1 1.3.4 2.9 1.5 2.9 3 0 1.6-1.9 2.3-3.2 1.5-.4-.2-1.3-.5-1.5 0-.1.5.2.8.6.9 1.1.4 2 .9 2.7 1.4a3 3 0 0 1 1 2.4c0 1.2-.5 2.2-1.7 3-1.2.7-2.7 1-4.7 1Z" />
@@ -23,7 +23,7 @@
                     </g>
                 </svg>
             </a>
-            <nav aria-label="Top level" class="page-nav">
+            <nav aria-label="Top level" class="page__nav">
                 <ul>
                     <li>💁‍♀️ <a href="/about">About</a>
                     <li>📝 <a href="/blog">Blog</a>
@@ -45,7 +45,7 @@
                 </label> #}
             </div>
         </header>
-        <main class="page-main grid">
+        <main class="page__main grid">
             <div class="section-side">
                 <div class="bio">
                     <img class="bio-pic" src="/images/pic.png" alt="Black and white avatar illustration: a smiling woman with shoulder length dark hair, large eyes and sparkles surrounding her">
@@ -66,7 +66,7 @@
                 <p class="italic">You hang your affects on a hook shaped like a lightning bolt and accept the cup of cocoa. The air smells fresh and zingy, like lime, and you hear something bubbling away in a far away room. You take a look around.</p>
             </section>
         </main>
-        <footer class="page-footer grid">
+        <footer class="page__footer grid">
             <div class=""></div>
             <div class="webrings">
                 <div class="webring--retronaut">
