--- a/_includes/core/_head.njk
+++ b/_includes/core/_head.njk
@@ -1,7 +1,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ title | safe or metadata.title }}</title>
+    <title>{%if title %}{{ title | safe}} -{% endif %} {{ metadata.title }} </title>
     <meta name="description" content="{{ description or metadata.description }}">
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%2210 0 100 100%22><text y=%22.90em%22 font-size=%2290%22>🌷</text></svg>">
     <link rel="icon" type="image/png" href="/images/favicon-32x32.png" sizes="32x32" />
