--- a/content/about.njk
+++ b/content/about.njk
@@ -1,16 +1,24 @@
 ---
-title: About the Webmaster
+title: About
 description: There is a rustling noise from behind a bush and you go to investigate. Amidst the leaves, a pair of mischievous brown eyes meet yours. Slowly, a woman emerges from the undergrowth, adorned with tangled brown and blonde hair and grubby gardening attire. You get a waft of earth and soap as she extends her hand in greeting.
 eleventyNavigation:
   key: About
   emoji: 💁‍♀️
   order: 2
 ---
-{% extends 'page.njk'%}
+{% extends 'layouts/page.njk'%}
 
-{%- block content -%}
+{%- block leftContent -%}
+	{{ macro.header(title) }}
+{%- endblock -%}
+
+
+{%- block mainContent -%}
 <section>
-	{{ macro.header(title + ' <span class="emoji" role="img" aria-label="Seedling">🌷</span>' ) }}
+
+	<p class="callout callout--warning">
+		🛠️ The content on this page will be re-written
+	</p>
 
 	<p><span class="emoji" role="img" aria-label="Wave">👋</span> Hey! I'm a 30ish y/o frontend dev based in Wales, UK. My pronouns are she/her.</p>
 
@@ -23,15 +31,6 @@ eleventyNavigation:
 		<li><span class="emoji" role="img" aria-label="Carrot">🥕</span> I'm vegetarian and have been since July 2020 (a long term dream enabled by lockdown).</li>
 		<li><span class="emoji" role="img" aria-label="Silly face">🤪</span> I love using emojis.</li>
 	</ul>
-
-	<h2>Some places on the internet that I go</h2>
-	<ul>
-		<li><span class="emoji" role="img" aria-label="Bird">🐦</span> Twitter: <a href="https://twitter.com/fri11s">@fri11s@twitter.com</a></li>
-		<li><span class="emoji" role="img" aria-label="Cat">😺</span> Neocities: <a href="https://neocities.org/site/fri11s">@fri11s@neocities.org</a></li>
-		<li><span class="emoji" role="img" aria-label="Elephant">🐘</span> Fediverse: <a href="https://cutie.city/@frills">@frills@cutie.city</a></li>
-	</ul>
-
-
 </section>
 
 {# TODO: make this accessible
@@ -102,6 +101,51 @@ eleventyNavigation:
 
 {%- endblock -%}
 
-{%- block js -%}
+{%- block rightContent -%}
+	<h2 class="visually-hidden">What I'm up to</h2>
+	{{ macro.callout(
+		element = 'article',
+		modifiers = 'callout--small callout--info statusCafe',
+		header = '
+			<span id="statusCafe-emoji"></span>
+			<h2>Latest status</h2>
+			<time id="statusCafe-time"></time>',
+		body = '
+			<div id="statusCafe-status">No recent update :(</div>
+	') }}
 
+	{{ macro.callout(
+		element = 'article',
+		modifiers = 'callout--small callout--info',
+		header = '
+		<span class="emoji" role="img" aria-label="Musical note">🎵</span>
+		<h2>Last played</h2>
+		<span><span id="lfmTime">right now</span></span>
+		',
+		body = '
+		<span id="lfmSong">No recently played song :(</span>
+		'
+	)}}
+
+	{{ macro.callout(
+		element = 'article',
+		modifiers = 'callout--small callout--info',
+		header = '
+		<span class="emoji" role="img" aria-label="Stack of books">📚</span>
+		<h2>Currently reading</h2>
+		',
+		body = '
+		The Eye of the World - Robert Jordan
+		'
+	)}}
+{%- endblock -%}
+
+
+{%- block scriptsContent -%}
+<!--Status.cafe-->
+<script defer>
+fetch("https://status.cafe/users/fri11s/status.json").then(t=>t.json()).then(t=>{if(!t.content.length){document.getElementById("statusCafe-status").innerHTML="No status yet.";return}document.getElementById("statusCafe-emoji").innerHTML=t.face,document.getElementById("statusCafe-time").innerHTML=t.timeAgo,document.getElementById("statusCafe-status").innerHTML=t.content});
+</script>
+<!--Last.fm-->
+<script type="text/javascript">let user="ooohbrap",url="https://lastfm-last-played.biancarosa.com.br/"+user+"/latest-song",song=document.querySelector("#lfmSong"),lastplayed=document.querySelector("#lfmTime");fetch(url).then(function(e){return e.json()}).then(function(e){song.innerHTML=e.track.name+" - "+e.track.artist["#text"],lastplayedunix=parseInt(e.track.date.uts),lastplayed.innerHTML=timeSince(lastplayedunix)});var timeSince=function(e){"object"!=typeof e&&(e=new Date(e));var t,o=Math.floor(new Date().getTime()/1e3-e),r=Math.floor(o/31536e3);return r>=1?t="year":(r=Math.floor(o/2592e3))>=1?t="month":(r=Math.floor(o/86400))>=1?t="day":(r=Math.floor(o/3600))>=1?t="hour":(r=Math.floor(o/60))>=1?t="minute":(r=o,t="second"),(r>1||0===r)&&(t+="s"),r+" "+t+" ago"};</script>
 {%- endblock -%}
