--- a/_includes/_components/buttonwall.njk
+++ b/_includes/_components/buttonwall.njk
@@ -1,5 +1,7 @@
 <section>
-	<p>My take on the classic 88x31 button wall. No images, just colourful little rectangles.</p>
+	<div class="reading-width">
+		<p>My take on the classic 88x31 button wall. No images, just colourful little rectangles.</p>
+	</div>
 
 	<button id="toggleHighContrast" class="button mb-1" aria-pressed="false">Enable high contrast</button>
 	<ul class="buttonwall">
