--- a/_includes/core/base.njk
+++ b/_includes/core/base.njk
@@ -1,6 +1,7 @@
 {% include "_includes/core/_template-start.njk" %}
 
 <body>
+    <script>0</script>
     <div class="page">
         {% include "_includes/core/_nav.njk" %}
         <main class="page__main grid grid--main">
