--- a/_includes/core/_head.njk
+++ b/_includes/core/_head.njk
@@ -8,4 +8,5 @@
     <link rel="icon" type="image/png" href="/images/favicon-16x16.png" sizes="16x16" />
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <link href="/css/new.css" rel="stylesheet">
+    <link rel="preload" as="font" href="/fonts/atkinson-hyperlegible/regular.woff2" crossorigin>
 </head>
