--- a/content/about.njk
+++ b/content/about.njk
@@ -20,17 +20,19 @@ eleventyNavigation:
 		🛠️ The content on this page will be re-written
 	</p>
 
-	<p><span class="emoji" role="img" aria-label="Wave">👋</span> Hey! I'm a 30ish y/o frontend dev based in Wales, UK. My pronouns are she/her.</p>
+	<div class="reading-width">
+		<p><span class="emoji" role="img" aria-label="Wave">👋</span> Hey! I'm a 30ish y/o frontend dev based in Wales, UK. My pronouns are she/her.</p>
 
-	<h2>Some things about me</h2>
-	<ul>
-		<li><span class="emoji" role="img" aria-label="Dog">🐶</span> I have a dog, she is a champagne (pale yellow) labrador called Orla. She is a nervous babe, but insanely loving and happy when home with her faves, sniffing undergrowth or running through long grass.</li>
-		<li><span class="emoji" role="img" aria-label="House">🏠</span> I am incredibly lucky to be a homeowner, and have my own garden where I grow vegetables and (mostly inherited) roses.</li>
-		<li><span class="emoji" role="img" aria-label="Game controller">🎮</span> I love playing cozy, wholesome games on my Steam Deck, like Stardew Valley, It Takes Two, Garden Galaxy. I quit a decade long addiction to first-person-shooter games like <a href="https://overwatch.blizzard.com/en-gb/career/Frills-2772/" target="_blank">Overwatch</a> (Mercy main) and Valorant (Killjoy main) in December 2022.</li>
-		<li><span class="emoji" role="img" aria-label="Face with hearts">🥰</span> My all-time favourite game is <a href="https://store.steampowered.com/app/600990/The_Gardens_Between/" target="_blank">The Gardens Between</a>.</li>
-		<li><span class="emoji" role="img" aria-label="Carrot">🥕</span> I'm vegetarian and have been since July 2020 (a long term dream enabled by lockdown).</li>
-		<li><span class="emoji" role="img" aria-label="Silly face">🤪</span> I love using emojis.</li>
-	</ul>
+		<h2>Some things about me</h2>
+		<ul>
+			<li><span class="emoji" role="img" aria-label="Dog">🐶</span> I have a dog, she is a champagne (pale yellow) labrador called Orla. She is a nervous babe, but insanely loving and happy when home with her faves, sniffing undergrowth or running through long grass.</li>
+			<li><span class="emoji" role="img" aria-label="House">🏠</span> I am incredibly lucky to be a homeowner, and have my own garden where I grow vegetables and (mostly inherited) roses.</li>
+			<li><span class="emoji" role="img" aria-label="Game controller">🎮</span> I love playing cozy, wholesome games on my Steam Deck, like Stardew Valley, It Takes Two, Garden Galaxy. I quit a decade long addiction to first-person-shooter games like <a href="https://overwatch.blizzard.com/en-gb/career/Frills-2772/" target="_blank">Overwatch</a> (Mercy main) and Valorant (Killjoy main) in December 2022.</li>
+			<li><span class="emoji" role="img" aria-label="Face with hearts">🥰</span> My all-time favourite game is <a href="https://store.steampowered.com/app/600990/The_Gardens_Between/" target="_blank">The Gardens Between</a>.</li>
+			<li><span class="emoji" role="img" aria-label="Carrot">🥕</span> I'm vegetarian and have been since July 2020 (a long term dream enabled by lockdown).</li>
+			<li><span class="emoji" role="img" aria-label="Silly face">🤪</span> I love using emojis.</li>
+		</ul>
+	</div>
 </section>
 
 {# TODO: make this accessible
@@ -138,6 +140,13 @@ eleventyNavigation:
 		The Eye of the World - Robert Jordan
 		'
 	)}}
+
+	<h2>Elsewhere</h2>
+	<ul class="unstyled">
+		<li><span class="emoji" role="img" aria-label="Bird">🐦</span> <a href="https://twitter.com/fri11s">@fri11s@twitter.com</a></li>
+		<li><span class="emoji" role="img" aria-label="Cat">😺</span> <a href="https://neocities.org/site/fri11s">@fri11s@neocities.org</a></li>
+		<li><span class="emoji" role="img" aria-label="Elephant">🐘</span> <a href="https://cutie.city/@frills">@frills@cutie.city</a></li>
+	</ul>
 {%- endblock -%}
 
 
