--- a/_includes/_components/buttonwall.njk
+++ b/_includes/_components/buttonwall.njk
@@ -1,6 +1,6 @@
 <section>
 	<div class="reading-width">
-		<p>My take on the classic 88x31 button wall. No images, just colourful little rectangles.</p>
+		<p>My take on the classic 88x31 button wall. No whizzy pics or blinkie gifs here, just colourful little boxes.</p>
 	</div>
 
 	<button id="toggleHighContrast" class="button mb-1" aria-pressed="false">Enable high contrast</button>
@@ -32,7 +32,7 @@
 			<a target="_blank" href="https://jessicajournals.com" class="buttonwall__item" style="font-size: 10px; background-color: #1e1e2e; color: #A5E3A1; background-image: linear-gradient(to left, #181825, #1e1e2e)">jessica journals</a>
 		</li>
 		<li>
-			<a target="_blank" href="https://sleepydev.neocities.org" class="buttonwall__item" style="font-size: 13px; background-color: #f9f9f9; color: blueviolet;">sleepdev</a>
+			<a target="_blank" href="https://sleepydev.neocities.org" class="buttonwall__item" style="font-size: 13px; background-color: #f9f9f9; color: blueviolet;">sleepydev</a>
 		</li>
 		<li>
 			<a target="_blank" href="https://10kph.neocities.org" class="buttonwall__item" style="font-size: 14px; background-color: #1c1e26; color: #e95678;">10kph</a>
@@ -57,6 +57,9 @@
 		</li>
 		<li>
 			<a target="_blank" href="https://punkwasp.neocities.org" class="buttonwall__item" style="font-size: 13px; background-color: #454315; color: #ffd700;">punkwasp</a>
+		</li>
+		<li>
+			<a target="_blank" href="https://sneekrealm.neocities.org" class="buttonwall__item" style="font-size: 13px; background-color: #f0e5d2; color: #035F31;">realm of sneek</a>
 		</li>
 		{# Artists #}
 		<li>
