--- a/_includes/core/base.njk
+++ b/_includes/core/base.njk
@@ -32,7 +32,7 @@
     {%- block scripts -%}
     <script>
         let consoleClubTitle = '🧑‍💻 Welcome to Console Club, fellow code wizard!'
-        let consoleClubDescription = 'How lovely to see a new face around here. Please, take a cookie. I extend an open invitation for you to freely use any code from this domain. However, I implore you to embrace your creativity and make it uniquely yours. Learn the runes and let your imagination soar, and with each line you borrow, infuse it with your own magic to craft something truly extraordinary! \n\nConsole Club membership cookie was added to your inventory.'
+        let consoleClubDescription = 'How lovely to see a new face around here. Please, take a cookie. I extend an open invitation for you to freely use any code from this domain. However, I implore you to embrace your creativity and make it uniquely yours. Learn the runes and let your imagination soar, and with each line you borrow, infuse it with your own magic to craft something truly extraordinary! \n\nConsole Club membership cookie was added to your inventory'
         const consoleClubStyles = [
         'color: black',
         'background: deeppink',
