--- a/content/about.njk
+++ b/content/about.njk
@@ -9,16 +9,12 @@ eleventyNavigation:
 {% extends 'layouts/page.njk'%}
 
 {%- block leftContent -%}
-	{{ macro.header(title) }}
 {%- endblock -%}
 
 
 {%- block mainContent -%}
 <section>
-
-	<p class="callout callout--warning">
-		🛠️ The content on this page will be re-written
-	</p>
+	{{ macro.header(title) }}
 
 	<div class="reading-width">
 		<p><span class="emoji" role="img" aria-label="Wave">👋</span> Hey! I'm a 30ish y/o frontend dev based in Wales, UK. My pronouns are she/her.</p>
@@ -86,9 +82,9 @@ eleventyNavigation:
 <section>
 	<h2>To do on this website</h2>
 	<ol>
-		<li>Credits page</li>
+		<li><span class="emoji" role="img" aria-label="Check mark">✅</span> Credits page</li>
 		<li>Manifesto page</li>
-		<li><span class="emoji" role="img" aria-label="Check mark">✅</span> 88x31 <a href="/buttonwall/">button wall</a> (how does this interact with manifesto?)</li>
+		<li><span class="emoji" role="img" aria-label="Check mark">✅</span> 88x31 <a href="/links/">button wall</a>.</li>
 		<li>Site map (that I nuked because I thought it was killing the pipeline)</li>
 		<li>Orla shrine</li>
 		<li>Cool things I've done page
