--- a/content/index.njk
+++ b/content/index.njk
@@ -18,7 +18,7 @@
 <section>
 	<div class="reading-width">
 		<h1 class="visually-hidden">Welcome to Frill's internet realm</h1>
-		<p>Greetings, world wide web adventurer! Step into my humble internet emporium, where a delightful array of digital knick-knacks, whimsical whirligigs, half-baked thoughts and musings await you. I am Frills, the proud webmaster of this curious domain in this wonderful wifi world.</p>
+		<p>Greetings, world wide web adventurer! Step into my humble internet emporium, where a delightful array of digital knick-knacks, whimsical whirligigs, half-baked thoughts and musings await you. I am Frills, the proud webmaster of this curious domain in this wonderous wifi world.</p>
 		<p>Do keep in mind that my collection is a work in progress, and I'm constantly adding new trinkets and reorganising shelves; sometimes you may find broken things... But fear not! I've already fixed the black hole I found yesterday.</p>
 		<p>Anyway, before you delve into the curios and oddities, enjoy this cozy cup of hot cocoa; a comforting beverage to keep those adventurous fingertips toasty as you wander through my internet sanctuary.</p>
 		<p class="italic">Cozy cup of hot cocoa was added to your inventory</p>
