--- a/content/manifesto.njk
+++ b/content/manifesto.njk
@@ -1,6 +1,7 @@
 ---
 title: Manifesto
 emoji: ' <span class="emoji" role="img" aria-label="Label"></span>'
+draft: true
 ---
 {% extends 'layouts/page.njk'%}
 
@@ -9,7 +10,6 @@ emoji: ' <span class="emoji" role="img" aria-label="Label"></span>'
 {%- block content -%}
 	{{ macro.header(title + emoji ) }}
 <section>
-	<p>To be written</p>
 </section>
 
 {%- endblock -%}
