--- a/public/css/new.css
+++ b/public/css/new.css
@@ -16,17 +16,15 @@
   }
 }
 
-/* @media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: light) {
     :root {
-        --bodybg: hsl(332, 20%, 5%);
-        --bg: hsl(332, 5%, 9%);
-        --border: hsl(332, 0%, 0%);
-        --link: hsl(332, 68%, 60%);
-        --linkhover: hsl(var(--contrast), 100%, 71%);
-        --text: hsl(332, 56%, 87%);
-        --callout: hsl(332, 9%, 4%);
+        --bodybg: LavenderBlush;
+        --bg: Snow;
+        --link: Blue;
+        --linkhover: Crimson;
+        --text: black;
     }
-} */
+}
 
 @font-face {
   font-family: 'AtkinsonHyperlegible';
@@ -81,7 +79,6 @@ body {
   linear-gradient(144deg, var(--bodybg) 7.5%, transparent 7.5%) 80px 73px;
   background-color: var(--bg);
   background-size: 100px 100px;
-  /* background-size: 150px 200px; */
 }
 
 h1,
@@ -252,6 +249,7 @@ p {
 }
 
 button {
+  will-change: transform;
   padding: 6px 12px;
   border-radius: 4px;
   background-color: gold;
@@ -259,7 +257,11 @@ button {
   border: 0;
   box-shadow: 4px 4px 0 0 DarkGoldenRod;
   cursor: pointer;
-  transition: 0.3s ease transform, 0.3s ease box-shadow;
+  transition: 0.3s ease transform, 0.3s ease background-color, 0.3s ease box-shadow;
+}
+
+button:hover {
+  background-color: #eec900;
 }
 
 button:active,
@@ -357,8 +359,8 @@ label {
 
 @keyframes colour {
   0% {
-    fill: hsl(0, 70%, 70%);
-    stroke: hsl(0, 70%, 70%)
+    fill: hsl(330, 70%, 70%);
+    stroke: hsl(330, 70%, 70%)
   }
 
   20% {
@@ -387,13 +389,50 @@ label {
   }
 }
 
-@keyframes blink {
-  0% {
-    opacity: 1;
+@media (prefers-color-scheme: light) {
+  @keyframes colour {
+    0% {
+      fill: hsl(330, 100%, 40%);
+      stroke: hsl(330, 100%, 40%)
+    }
+
+    20% {
+      fill: hsl(51, 100%, 40%);
+      stroke: hsl(51, 100%, 40%)
+    }
+
+    40% {
+      fill: hsl(102, 100%, 40%);
+      stroke: hsl(102, 100%, 40%)
+    }
+
+    60% {
+      fill: hsl(153, 100%, 40%);
+      stroke: hsl(153, 100%, 40%)
+    }
+
+    80% {
+      fill: hsl(204, 100%, 40%);
+      stroke: hsl(204, 100%, 40%)
+    }
+
+    100% {
+      fill: hsl(255, 70%, 70%);
+      stroke: hsl(255, 70%, 70%)
+    }
   }
 
+}
+
+@keyframes blink {
+  0% {
+    fill: gold;
+  }
+  30% {
+      fill: transparent;
+  }
   100% {
-    opacity: 0;
+    fill: transparent;
   }
 }
 
@@ -430,32 +469,25 @@ label {
 
   }
 
-  .logo:hover .logo-x,
-  .logo:focus .logo-x,
-  .logo:active .logo-x {
+  .logo-x {
+    fill: transparent;
     animation-name: blink;
     animation-fill-mode: normal;
     animation-iteration-count: infinite;
     animation-direction: backwards;
-  }
-
-  .logo-x {
-    opacity: 0;
+    animation-duration: 7500ms;
   }
 
   .logo-x:nth-child(3) {
-    animation-delay: 0s;
-    animation-duration: 2.3666666s;
+    animation-delay: 1000ms;
   }
 
   .logo-x:nth-child(2) {
-    animation-delay: 0.3s;
-    animation-duration: 2.71111s;
+    animation-delay: 1850ms;
   }
 
   .logo-x:nth-child(1) {
-    animation-delay: 0.1s;
-    animation-duration: 1.866666s;
+    animation-delay: 2500ms;
   }
 }
 
@@ -565,8 +597,6 @@ label {
   }
 }
 
-.content__extra {
-}
 @media (min-width: 1200px) {
   .content__extra {
     flex: 1 0 auto;
@@ -605,18 +635,10 @@ label {
 }
 
 .buttonwall.--highcontrast .buttonwall__item {
-  background: var(--text) !important;
-  color: var(--bodybg) !important;
-  box-shadow: inset 0 0 0 1px var(--bodybg) !important;
+  background: var(--bg) !important;
+  color: var(--text) !important;
+  box-shadow: inset 0 0 0 1px var(--text) !important;
   text-decoration: underline !important
-}
-
-@media (prefers-color-scheme:dark) {
-  .buttonwall.--highcontrast .buttonwall__item {
-    background: var(--bodybg) !important;
-    color: var(--text) !important;
-    box-shadow: inset 0 0 0 1px var(--text) !important
-  }
 }
 
 .buttonwall__item {
@@ -640,17 +662,8 @@ label {
 .buttonwall__item:active,
 .buttonwall__item:focus,
 .buttonwall__item:hover {
-  transform: scale(1.1);
   text-decoration: none;
-}
-
-@media (min-width:767px) {
-
-  .buttonwall__item:active,
-  .buttonwall__item:focus,
-  .buttonwall__item:hover {
-    transform: scale(2)
-  }
+  z-index: 1;
 }
 
 /* Webrings */
