--- a/_includes/core/_footer.njk
+++ b/_includes/core/_footer.njk
@@ -3,7 +3,7 @@
     <nav aria-label="Top level" class="page__nav">
         <ul>
             <li>♿ <a href="/accessibility">Accessibility</a>
-            <li>✨ <a href="/credits">Credits</a>
+            <li>👩‍💻 <a href="/site">About the site</a>
         </ul>
     </nav>
 </header>
