--- a/_includes/core/_nav.njk
+++ b/_includes/core/_nav.njk
@@ -6,10 +6,7 @@
     </a>
     <nav aria-label="Top level" class="page__nav">
         <ul>
-            {# <li>💁‍♀️ <a href="/about">About</a>
-                <li>📝 <a href="/blog">Blog</a>
-                <li>🔗 <a href="/links">Links</a>
-                <li>🌿 <a href="/ethos">Ethos</a>
+            {#  <li>🌿 <a href="/ethos">Ethos</a>
                 <li>👽 <a href="/experiments">Experiments</a>
                 <li>✨ <a href="/credits">Credits</a>
                 <li>🦄 <a href="#">Other</a> #}
